# rust-computer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
code/: hello_world.asm  hello_world.txt
code/cpudef/: cpudef.asm
macros/: Cargo.toml
macros/src/: lib.rs
src/: computer.rs  lib.rs
src/cpu/: cpu.rs  instructions.rs  memory.rs  mod.rs  utils.rs
src/ui/: game_of_life.rs  main.rs  mod.rs  state.rs  utils.rs  worker.rs
src/ui/support/: boilerplate.rs  interop.rs  mod.rs
