[package]
name = "rust-computer"
version = "0.1.0"
authors = ["thecodewarrior <code@thecodewarrior.dev>"]
edition = "2018"

[[bin]]
name = "rust_computer"
path = "src/lib.rs"

[dependencies]
rust-computer-macros = { path = "./macros" }

# ui stuff
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.5" }