[package]
name = "rust-computer"
version = "0.1.0"
authors = ["thecodewarrior <code@thecodewarrior.dev>"]
edition = "2018"

[[bin]]
name = "rust_computer"
path = "src/lib.rs"

[dependencies]
rust-computer-macros = { path = "./macros" }

# ui stuff
druid = { path = "../druid/druid" }
spin_sleep = "0.3"
